Added custom bootstrap custom build with only grid system.

--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -281,7 +281,7 @@
     z-index: 10;
 }
 
-.list-action-selected + .actions-row
+.list-action-selected > .actions-row
 {
     display: block !important;
 }
