--- a/content/css/base.less
+++ b/content/css/base.less
@@ -338,6 +338,8 @@
 .list-action-selected + .actions-row
 {
     display: block !important;
+    float: right;
+    margin-left: 22px;
 }
 
 .list-action-selected > .list-item-selector
