--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -1478,9 +1478,8 @@ img
 
 .related-view-widget .tab .title
 {
-    font-size: 0.8em;
+    font-size: 1.00em;
     font-weight: bold;
-    color: @gray1-dark;
 	padding: 0 0 0 14px;
 	float:left;
 }
@@ -1529,6 +1528,7 @@ img
 .related-view-widget .action-item
 {
     padding: 0 2px;
+    margin: 10px;
 }
 
 .related-view-widget .action-item > img
@@ -1537,12 +1537,81 @@ img
    height:24px;
 }
 
+
 .related-view-widget .action
 {
     font-weight: bold;
     color: @blue3-dark;
     float:left;
     padding: 0 10px;
+}
+
+.related-view-widget .item-actions
+{
+    font-weight: bold;
+    color: @blue3-dark;
+    font-size: 1.2em;
+    text-align: right;
+    padding: 0 2px;
+    margin: 2px;
+}
+
+.related-view-widget .item-actions .action-item
+{
+    padding: 0 2px;
+    margin: 10px;
+}
+
+.related-view-widget .item-actions .action-item-with-button 
+{
+    font-weight: bold;
+    color: white;
+    font-size: 0.5em;
+    text-align: center;
+    padding: 0 2px;
+    margin: 1px 2px 1px 2px;
+    line-height: 18px;
+    cursor: pointer;
+    border: 1px outset @gray1-dark;
+    border-image-source: initial;
+    border-image-slice: initial;
+    border-image-width: initial;
+    border-image-outset: initial;
+    border-image-repeat: initial;
+    background-color: @gray1-dark;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    border-radius:2px;
+    -webkit-border-radius:2px;
+    -moz-border-radius: 2px;
+    outline-color: #fe5000;
+}
+
+ .related-view-widget .selected
+ {
+     background-color: @blue3-darker !important;
+ }
+ .related-view-widget .un-selected
+ {
+     background-color: @gray1-light !important;
+ }
+.related-view-widget .item-actions .action-item-with-icon > img
+{
+   width:24px;
+   height:24px;
+}
+
+.related-view-widget .item-actions .action-item-with-icon .selected
+{
+     outline-color: #fe5000;
+}
+
+
+
+.related-view-widget .disabled
+{
+    opacity: 0.3;
 }
 
 .related-view-widget .header
@@ -1607,7 +1676,7 @@ img
     color:@black-darker;
     left: 40px;
     position: relative;
-	padding: 0 40px 0 0;
+	padding: 0 40px 5px 0px;
 
 }
 .related-view-widget .item .item-detail 
@@ -1616,6 +1685,7 @@ img
     left: 40px;
     position: relative;
 	padding: 0 40px 0 0;
+    line-height: 1.25em;
 }
 .related-view-widget .item .item-footer 
 {
@@ -1652,7 +1722,7 @@ img
     padding: 1em;
 }
 
-.related-view-widget .loading-indicator  div,
+.related-view-widget .loading-indicator  div
 {
     background: url('../../../images/loading-indicator-white.gif') no-repeat scroll 0 50%;
     padding: 0 0 0 20px;
