Updating RelatedView Styles

--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -1456,7 +1456,7 @@ img
 
 .related-view-widget .tab-items
 {
-    margin: 0;
+    margin: 5px 2px 2px 2px;
     padding: 2px;
     display: inline-block;
     width: 100%;
