Updateing MAA Styles

--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -1710,7 +1710,6 @@ img
 {
     float: left;
     border-width: 0;
-    height: 22px;
     left: 0;
     padding: 0;
     position: relative;
@@ -1723,7 +1722,7 @@ img
     color:@black-darker;
     left: 4px;
     position: relative;
-	padding: 0 40px 5px 0px;
+    margin: 1px;
 
 }
 .related-view-widget .item .item-detail 
@@ -1731,7 +1730,7 @@ img
     color:@gray1-dark;
     left: 4px;
     position: relative;
-	padding: 0 40px 0 0;
+    margin: 1px;
     line-height: 1.25em;
 }
 .related-view-widget .item .item-footer 
