Adding Attachment related View

--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -1449,7 +1449,7 @@ img
 }
 .related-view-widget .tab
 {
-    margin: 0;
+    margin: 2px;
     padding: 1px;
     background-color: @gray1-lighter;
 }
@@ -1603,12 +1603,7 @@ img
     margin: 1px 2px 1px 2px;
     line-height: 20px;
     cursor: pointer;
-    border: 1px outset @gray1-lighter;
-    border-image-source: initial;
-    border-image-slice: initial;
-    border-image-width: initial;
-    border-image-outset: initial;
-    border-image-repeat: initial;
+    border: none;
     background-color: @gray1-lighter;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -1699,7 +1694,7 @@ img
 	line-height: 0.95em;
     min-height: 0.5em;
     overflow: hidden;
-    padding: 0;
+    padding: 4px;
     position: relative;
     text-overflow: ellipsis;
     margin:1px;
