--- a/min/css/themes/swiftpage/sdk.min.swiftpage.debug.css
+++ b/min/css/themes/swiftpage/sdk.min.swiftpage.debug.css
@@ -1173,7 +1173,7 @@ img {
   font-size: 0.65em;
 }
 .related-view-widget .tab {
-  margin: 0;
+  margin: 2px;
   padding: 1px;
   background-color: #d0d0d0;
 }
@@ -1287,12 +1287,7 @@ img {
   margin: 1px 2px 1px 2px;
   line-height: 20px;
   cursor: pointer;
-  border: 1px outset #d0d0d0;
-  border-image-source: initial;
-  border-image-slice: initial;
-  border-image-width: initial;
-  border-image-outset: initial;
-  border-image-repeat: initial;
+  border: none;
   background-color: #d0d0d0;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -1362,7 +1357,7 @@ img {
   line-height: 0.95em;
   min-height: 0.5em;
   overflow: hidden;
-  padding: 0;
+  padding: 4px;
   position: relative;
   text-overflow: ellipsis;
   margin: 1px;
