Adding related view detail widget

--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -1439,6 +1439,7 @@ img
 {
     margin: 2px;
     padding: 1px;
+    margin-bottom: 1px !important;
     background-color: @gray1-lighter;
 }
 
@@ -1447,7 +1448,7 @@ img
     margin: 5px 2px 2px 2px;
     padding: 2px;
     display: inline-block;
-    width: 100%;
+    width: 95%;
 }
 
 .related-view-widget .tab-item
@@ -1474,7 +1475,7 @@ img
     height: 25px;
     width: 25px;
     float: right;
-    margin: 0px 1px 0px 0px; 
+    margin: 0px -10px 0px 0px; 
     background-color: transparent;
     background-image: url('../../../images/Down_Arrow.png');
     background-repeat: no-repeat;
