--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -1588,12 +1588,12 @@ img
     color: white;
     font-size: 0.5em;
     text-align: center;
-    padding: 0 2px;
-    margin: 1px 2px 1px 2px;
+    padding: 0 4px;
+    margin: 1px 2px 1px 10px;
     line-height: 20px;
     cursor: pointer;
     border: none;
-    background-color: @gray1-lighter;
+    background-color: @blue3-dark;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
