--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -1422,12 +1422,12 @@ img
 
 .related-view-widget
 {
-    padding: 0px;
+    margin: 1px 1px 2px 1px;
 }
 
 .related-view-widget .panel
 {
-    padding: 1px;
+    padding: 0px 0px 40px 0px;
     position: relative;
     top: 0px;
 }
@@ -1464,7 +1464,7 @@ img
    text-overflow: ellipsis;
    white-space: nowrap;
    position: absolute;
-   left: 40px;
+   left: 60px;
    right: 20px;
    overflow: hidden;
    display: block;
