Remove plus/minus buttons.

--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -747,6 +747,7 @@ body.landscape > .viewContainer > #generic_calendar > #datetime-picker > .time-c
     margin: 0;
     border: 0;
     text-align:center;
+    vertical-align: top;
     width: 64px;
 }
 #datetime-picker td>select {
@@ -757,11 +758,6 @@ body.landscape > .viewContainer > #generic_calendar > #datetime-picker > .time-c
     margin: 0;
     padding:0;
     position: relative; /* Fix android browser issue with -webkit-transform blocking <select> */
-}
-#datetime-picker .datetime-selects td {
-    border: none;
-    border-left: 1px solid #b3b3b3;
-    border-right: 1px solid #b3b3b3;
 }
 #datetime-picker td>button {
     display: block;
