--- a/min/css/themes/swiftpage/sdk.min.swiftpage.debug.css
+++ b/min/css/themes/swiftpage/sdk.min.swiftpage.debug.css
@@ -608,7 +608,6 @@ body.landscape > .viewContainer > #generic_calendar > #datetime-picker > .time-c
   margin: 0;
   border: 0;
   text-align: center;
-  vertical-align: top;
   width: 64px;
 }
 #datetime-picker td > select {
@@ -620,6 +619,11 @@ body.landscape > .viewContainer > #generic_calendar > #datetime-picker > .time-c
   padding: 0;
   position: relative;
   /* Fix android browser issue with -webkit-transform blocking <select> */
+}
+#datetime-picker .datetime-selects td {
+  border: none;
+  border-left: 1px solid #b3b3b3;
+  border-right: 1px solid #b3b3b3;
 }
 #datetime-picker td > button {
   display: block;
@@ -1543,7 +1547,7 @@ body > .viewContainer {
 }
 .toggle-vertical {
   width: 64px;
-  height: 45px;
+  height: 126px;
   margin: 0;
   position: relative;
 }
@@ -1579,7 +1583,7 @@ body > .viewContainer {
   top: -1px;
   left: -1px;
   width: 40px;
-  height: 14px;
+  height: 28px;
   border: 1px solid #999b9f;
   background-color: #b4b9be;
   border-radius: 6px;
