--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -1018,41 +1018,35 @@ body > .viewContainer > [selected="true"]
     width: 100%;
 }
 
-.viewContainer > .toolbar,
 .toolbar
 {
+    .flex-display();
+    .flex-direction(row);
+    .flex-align-items(center);
+
     position: absolute;
     top: 0;
     left: 0;
 
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
+    .box-sizing(border-box);
 
     height: 40px;
     width: 100%;
     padding: 4px 4px;
-
-    display: block;
     z-index: 10;
 }
-.viewContainer > .toolbar > h1,
+
 .toolbar > h1 {
+    .flex-item-grow(1);
+    .flex-item-order(1);
     overflow: hidden;
-    display: block;
-    margin: 0;
-    padding: 0;
     font-size: 1em;
-    line-height: 34px;
     font-weight: normal;
     text-align: center;
     text-overflow: ellipsis;
     white-space: nowrap;
     color: #FFFFFF;
 
-    position: absolute;
-    left: 0px;
-    right: 0px;
     z-index: 0;
 }
 
@@ -1094,16 +1088,14 @@ body > .viewContainer > [selected="true"]
     height: 24px;
 }
 
-.toolButton-left
-{
-    float: left;
-    margin-right: 10px;
-}
-
 .toolButton-right
 {
-    float: right;
-    margin-left: 10px;
+    .flex-item-order(1);
+}
+
+.toolButton-left
+{
+    .flex-item-order(0);
 }
 
 body > .viewContainer > .dialog {
