Initial dStore SData implementation. Currently the store's get method is working with our detail. fetch/fetchRange are very much a TODO.

--- a/GruntRunner.tmpl
+++ b/GruntRunner.tmpl
@@ -33,6 +33,7 @@
         packages: [
             { name: 'dojo', location: 'libraries/dojo/dojo' },
             { name: 'dijit', location: 'libraries/dojo/dijit' },
+            { name: 'dstore', location: 'libraries/dstore' },
             { name: 'snap', location: 'libraries/snap', main: 'snap' },
             { name: 'moment', location: '../libraries/moment', main: 'moment-with-langs.min' },
             { name: 'argos', location: '.grunt/grunt-contrib-jasmine/src-out' },// istanbul outputs the instrumented to this temp folder
