Flex used in tabs and quick actions to make them responsive

--- a/content/css/themes/crm/theme.less
+++ b/content/css/themes/crm/theme.less
@@ -132,56 +132,75 @@ body > .viewContainer {
 }
 
 .quick-actions > .action-list {
-    background-color: @color-deep-slate;
-    padding: 10px 5px 15px 5px;
+  display: inline-flex;
+  width: 100%;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  background-color: @color-deep-slate;
+  padding: 10px 5px 15px 5px;
+  > li {
+    flex-grow: 1;
+    flex-basis: 150px;
+    border-right: 2px solid #fff;
+    > a {
+      margin: 0 0.25em 0 0;
+    }
+  }
 }
 
 .tab-list > .tab,
 .more-tab-dropdown > .tab {
-        border-radius: 2px 2px 0 0;
-        cursor: pointer;
-        padding: 4px 6px 5px;
-        position: relative;
-        -webkit-transition: background-color 0.25s ease;
-        -moz-transition: background-color 0.25s ease;
-        -ms-transition: background-color 0.25s ease;
-        -o-transition: background-color 0.25s ease;
-        transition: background-color 0.25s ease;
-        color: @color-graphite;
-        font-size: 15px;
-        font-weight: normal;
-        text-decoration: none;
+  border-radius: 2px 2px 0 0;
+  cursor: pointer;
+  padding: 4px 6px 5px;
+  position: relative;
+  -webkit-transition: background-color 0.25s ease;
+  -moz-transition: background-color 0.25s ease;
+  -ms-transition: background-color 0.25s ease;
+  -o-transition: background-color 0.25s ease;
+  transition: background-color 0.25s ease;
+  color: @color-graphite;
+  font-size: 15px;
+  font-weight: normal;
+  text-decoration: none;
 }
 
 .tab-list {
-    border-bottom: 1px solid @color-lighter-slate !important;
-    height: 30px;
-    list-style: none outside none;
-    overflow: hidden;
-    .tab {
-        display: inline-block;
-    }
-    .selected {
-        color: @color-azure;
-    }
+  display: inline-flex;
+  justify-content: space-around;
+  width: 100%;
+  flex-flow: row wrap;
+  border-bottom: 1px solid @color-lighter-slate !important;
+  height: 30px;
+  list-style: none outside none;
+  overflow: hidden;
+  .tab {
+      flex-grow: 1;
+      text-align: center;
+  }
+  .selected {
+      color: @color-azure;
+  }
 }
 
 .more-tab-dropdown {
-    position: absolute;
-    visibility: hidden;
-    z-index: 10;
-    background-color: @background-lighter;
-    box-shadow: 0 2px 3px @color-light-slate;
-    margin: 0;
-    padding: 0;
-    overflow-y: auto;
-    .tab {
-        display: block;
-    }
-    .selected {
-        background-color: @color-azure;
-        color: #fff;
-    }
+  display: inline-block;
+  max-width: 60%;
+  position: absolute;
+  visibility: hidden;
+  z-index: 10;
+  background-color: @background-lighter;
+  box-shadow: 0 2px 3px @color-light-slate;
+  margin: 0;
+  padding: 0;
+  overflow-y: auto;
+  .tab {
+    display: block;
+  }
+  .selected {
+    background-color: @color-azure;
+    color: #fff;
+  }
 }
 
 .detailContent {
@@ -201,7 +220,7 @@ body > .viewContainer {
 }
 
 .detail-header {
-    padding: 25px 0 10px 0 !important;
+    padding: 10px 0 !important;
     font-size: 18px;
 }
 
