--- a/content/css/themes/crm/toolbar.less
+++ b/content/css/themes/crm/toolbar.less
@@ -72,3 +72,7 @@ body > .viewContainer > .toolbar,
     margin-left: 2px;
 }
 
+.query {
+  line-height: 32px;
+  font-family: @toolbar-search-font;
+}
