--- a/content/css/themes/crm/variables.less
+++ b/content/css/themes/crm/variables.less
@@ -145,6 +145,7 @@
 @toolbar-button-border: none;
 /*2px solid @icon-color;*/
 @toolbar-button-disabled-opacity: 0.25;
+@toolbar-search-font: FontAwesome, @font-family; // Corresponds to the Font Awesome Search icon
 
 // List
 @list-bg-color: @background-darker;
