Matching detail view feedback

--- a/content/css/themes/crm/base.less
+++ b/content/css/themes/crm/base.less
@@ -404,18 +404,12 @@ li > .disabled,
 }
 
 ul.action-list > li > a > div {
-    float: left;
-    margin: 0 5px 0 0;
-    width: 39px;
-    height: 30px;
-    text-align: center;
-    padding: 5px;
-    font-size: 1.1em;
+    font-size: 1em;
     .box-sizing(border-box);
 }
 
 .action-list > li {
-    height: 30px;
+    height: 1em;
     line-height: 1em !important;
     cursor: pointer !important;
 }
