Flattening out less files and organizing variables

--- a/content/css/themes/crm/toolbar.less
+++ b/content/css/themes/crm/toolbar.less
@@ -55,7 +55,7 @@ body > .viewContainer > .toolbar,
     background-color: @toolbar-button-bg-color;
     outline: none;
     border: none;
-    font-size: 1.5em;
+    font-size: @font-size-h2;
 }
 
 .toolbar.busy .actionButton span {
@@ -72,3 +72,7 @@ body > .viewContainer > .toolbar,
     margin-left: 2px;
 }
 
+.query {
+  line-height: 32px;
+  font-family: @toolbar-search-font;
+}
