--- a/content/css/normalize.less
+++ b/content/css/normalize.less
@@ -4,12 +4,14 @@
 // 1. Set default font family to sans-serif.
 // 2. Prevent iOS text size adjust after orientation change, without disabling
 //    user zoom.
+// 3. Using rem sizing functions as so, 1.4rem ~ 14px
 //
 
 html {
   font-family: sans-serif; // 1
   -ms-text-size-adjust: 100%; // 2
   -webkit-text-size-adjust: 100%; // 2
+  font-size: 62.5%; // 3
 }
 
 //
