--- a/content/css/themes/crm.less
+++ b/content/css/themes/crm.less
@@ -8,5 +8,6 @@
 @import "crm/toolbar.less";
 @import "crm/datetime-picker.less";
 @import "crm/sohoxiControls.less";
+@import "crm/snapjs.less";
 
 @import "../../../libraries/font-awesome-4.4.0/less/font-awesome.less";
