--- a/content/css/themes/crm/base.less
+++ b/content/css/themes/crm/base.less
@@ -454,6 +454,8 @@ body {
     padding: 0;
     margin: 0;
     overflow: hidden;
+    font-family: Helvetica, Arial;
+    font-size: 1rem;
 }
 
 body > .viewContainer {
