Further flattening and move toward theming

--- a/content/css/themes/crm/variables.less
+++ b/content/css/themes/crm/variables.less
@@ -159,7 +159,7 @@
 @label-font-size: @font-size-paragraph;
 
 @icon-color: #fff;
-@icon-size: 2.4em;
+@icon-size: 2.4rem;
 
 // Forms
 @form-label-color: lighten(@color-black, 50%);
@@ -191,6 +191,7 @@
 @toolbar-button-border: none;
 /*2px solid @icon-color;*/
 @toolbar-button-disabled-opacity: 0.25;
+@toolbar-search-font: FontAwesome, @font-family; // Corresponds to the Font Awesome Search icon
 
 // List
 @list-bg-color: @background-darker;
