--- a/content/css/themes/crm.less
+++ b/content/css/themes/crm.less
@@ -6,8 +6,6 @@
 @import "crm/theme.less";
 @import "crm/forms.less";
 @import "crm/toolbar.less";
-@import "crm/datetime-picker.less";
-@import "crm/sohoxiControls.less";
-@import "crm/snapjs.less";
+@import "sohoxiControls.less";
 
 @import "../../../libraries/font-awesome-4.4.0/less/font-awesome.less";
