--- a/content/css/themes/crm/base.less
+++ b/content/css/themes/crm/base.less
@@ -1,308 +1,7 @@
 @import "variables.less";
 @import "mixins.less";
-
-/* snapjs styles */
-.tall {
-    height: 100%;
-}
-
-.relative {
-    position: relative;
-}
-
-.absolute {
-    position: absolute;
-}
-
-.left {
-    float: left;
-}
-
-.right {
-    float: right;
-}
-
-.drawers {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-
-.left-drawer,
-.right-drawer {
-    visibility: hidden;
-    display: none;
-    background-color: @menu-list-item-bg-color;
-    overflow: auto;
-    .list .scroller {
-      background-color: @menu-list-item-bg-color;
-      top: 42px;
-    }
-}
-
-.snapjs-left .left-drawer {
-    visibility: visible;
-    display: block;
-}
-
-.snapjs-right .right-drawer {
-    visibility: visible;
-    display: block;
-}
-
-.left-drawer, .right-drawer {
-    top: 0;
-    left: 0;
-    width: 265px;
-    bottom: 0;
-    -webkit-transition-property: top, bottom;
-    transition-property: top, bottom;
-    -webkit-transition-duration: .2s, .2s;
-    transition-duration: .2s, .2s;
-    -webkit-transition-timing-function: linear, linear;
-    transition-timing-function: linear, linear;
-}
-
-.left-drawer {
-    z-index: 2;
-}
-
-.right-drawer {
-    left: auto;
-    right: 0;
-    z-index: 1;
-}
-
-.left-drawer,
-.right-drawer {
-    -webkit-transition: width 0.3s ease;
-    -moz-transition: width 0.3s ease;
-    -o-transition: width 0.3s ease;
-    transition: width 0.3s ease;
-}
-
-.drawer-inner {
-    -webkit-transition: opacity 0.3s ease;
-    -moz-transition: opacity 0.3s ease;
-    -o-transition: opacity 0.3s ease;
-    transition: opacity 0.3s ease;
-}
-
-.snapjs-expand-left .drawer-inner,
-.snapjs-expand-right .drawer-inner {
-    opacity: 0;
-}
-
-.snapjs-expand-left .left-drawer,
-.snapjs-expand-right .right-drawer {
-    width: 100%;
-}
-
-/* end snapjs styles*/
-
-.list-content > li {
-    cursor: pointer;
-}
-
-.list-more, .list-empty-opt {
-    .toolButton {
-        position: relative;
-        min-width: 28px;
-        min-height: 28px;
-        padding: 0;
-        z-index: 100;
-    }
-
-    .toolButton > img {
-        margin: 4px;
-    }
-
-    .toolButton > span {
-        display: inline-block;
-        background-repeat: no-repeat;
-        background-position: center center;
-        margin: 4px;
-        width: 24px;
-        height: 24px;
-    }
-
-    .toolButton-left {
-        float: left;
-        margin-right: 10px;
-    }
-
-    .toolButton-right {
-        float: right;
-        margin-left: 10px;
-    }
-    display: none;
-    padding: 12px;
-    border-bottom: 1px solid #DDD;
-}
-
-.list-more .list-remaining {
-    display: none;
-}
-
-.list-loading-indicator {
-    display: none;
-}
-
-/* list view states */
-.list-hide-search .list-search {
-    display: none;
-}
-
-.list-has-more .list-more, .list-has-empty-opt .list-empty-opt {
-    display: block;
-    background-color: #fff;
-}
-
-.list-has-more .list-remaining {
-    display: block;
-    text-align: center;
-    padding: 0px 0 12px 0;
-}
-
-.list-loading .list-loading-indicator {
-    display: block;
-    text-align: center;
-}
-
-.list-loading .list-loading-indicator h2 {
-    padding: 0 0 0 10px;
-    display: inline-block;
-    text-align: center;
-    overflow: inherit;
-}
-
-.list-content > li > a {
-    padding: 8px 32px 8px 36px;
-}
-
-/* list selection */
-.list .list-item-selector {
-    visibility: hidden;
-    width: 24px;
-    height: 24px;
-    line-height: 24px;
-    position: absolute;
-    top: 8px;
-    left: 12px;
-    z-index: 10;
-    background: none;
-    border: 0 none #000;
-    padding: 0 2px 0 0px;
-    color: @black-darker;
-}
-
-.list-show-actions .list-item-selector {
-    visibility: visible !important;
-    width: 38px;
-    height: 38px;
-    left: 6px;
-
-    line-height: 30px;
-    padding: 0 2px 0 2px;
-
-    color: @color-slate;
-}
-
-.list-show-actions .list-item-selector > img {
-    position: absolute;
-    top: 6px;
-    left: 6px;
-    border: none 0 black;
-}
-
-.list-item-selected > .list-item-selector {
-    visibility: visible !important;
-}
-
-.list-item-static-selector {
-    div {
-        width: 100%;
-        text-align: center;
-    }
-
-    .icon {
-        padding-left: 8px;
-    }
-
-    .fa-stack {
-        top: -7px;
-    }
-
-    visibility: visible;
-    width: 38px;
-    position: absolute;
-    top: 8px;
-    left: 6px;
-    bottom: 0px;
-    z-index: 10;
-}
-
-.list-action-selected + .actions-row {
-    display: block !important;
-}
-
-.list-action-selected > .list-item-selector {
-    border-color: #DDD;
-    .border-radius(3px);
-    bottom: 0px;
-    height: auto !important;
-    box-shadow: none !important;
-    -moz-box-shadow: none !important;
-    -webkit-box-shadow: none !important;
-
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-}
-
-.actions-row {
-    display: none;
-}
-
-.actions-row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.list.list-hide-search .scroller {
-    top: 0px;
-}
-
-.scroller {
-    width: 100%;
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    -webkit-overflow-scrolling: touch;
-
-    &.animate {
-        -webkit-transition: top 0.3s ease;
-        transition: top 0.3s ease;
-    }
-}
-
-.list .scroller {
-    top: 47px;
-}
-
-.list .item-static-icon {
-    width: 24px;
-    height: 24px;
-    top: 6px;
-    left: 6px;
-    float: left;
-    padding: 0px 5px 0px 0px;
-}
+@import "snapjs.less";
+@import "list.less";
 
 /* grouped list */
 .group-content > h2 {
@@ -405,18 +104,12 @@ li > .disabled,
 }
 
 ul.action-list > li > a > div {
-    float: left;
-    margin: 0 5px 0 0;
-    width: 39px;
-    height: 30px;
-    text-align: center;
-    padding: 5px;
-    font-size: 1.1em;
+    font-size: 1em;
     .box-sizing(border-box);
 }
 
 .action-list > li {
-    height: 30px;
+    height: 1em;
     line-height: 1em !important;
     cursor: pointer !important;
 }
@@ -454,8 +147,6 @@ body {
     padding: 0;
     margin: 0;
     overflow: hidden;
-    font-family: Helvetica, Arial;
-    font-size: 1rem;
 }
 
 body > .viewContainer {
