--- a/content/css/themes/crm/mixins.less
+++ b/content/css/themes/crm/mixins.less
@@ -1,19 +1,19 @@
 .border-radius (@size) {
-    border-radius:         @arguments;
-    -webkit-border-radius: @arguments;
-    -moz-border-radius:    @arguments;
+  border-radius:         @arguments;
+  -webkit-border-radius: @arguments;
+  -moz-border-radius:    @arguments;
 }
 
 .box-shadow (@box) {
-    box-shadow:         @box;
-    -webkit-box-shadow: @box;
-    -moz-box-shadow:    @box;
+  box-shadow:         @box;
+  -webkit-box-shadow: @box;
+  -moz-box-shadow:    @box;
 }
 
 .box-sizing (@sizing) {
-    box-sizing:         @sizing;
-    -webkit-box-sizing: @sizing;
-    -moz-box-sizing:    @sizing;
+  box-sizing:         @sizing;
+  -webkit-box-sizing: @sizing;
+  -moz-box-sizing:    @sizing;
 }
 
 .transform (@scale) {
@@ -27,13 +27,14 @@
   transition:         @arguments;
   -webkit-transition: @arguments;
   -moz-transition:    @arguments;
+  -ms-transition:     @arguments;
   -o-transition:      @arguments;
 }
 
 .user-select (@select) {
-    -webkit-user-select: @select;
-    -khtml-user-select:  @select;
-    -moz-user-select:    @select;
-    -ms-user-select:     @select;
-    user-select:         @select;
+  -webkit-user-select: @select;
+  -khtml-user-select:  @select;
+  -moz-user-select:    @select;
+  -ms-user-select:     @select;
+  user-select:         @select;
 }
