--- a/content/css/themes/crm/theme.less
+++ b/content/css/themes/crm/theme.less
@@ -1,6 +1,16 @@
 @import "variables.less";
 @import "mixins.less";
 
+// This file will be used to declare theme values that are applied instantly by switching the class name of the body.
+// New themes will match this file's structure and should modify the variable values to whatever value is desired.
+
+// NOTE: Ensure that BEM notation is followed, hence the only nesting should occur here and is necessary for
+// the theming to work.
+// NOTE: Theme names should follow the following format theme--themeName where the themeName is camelCase
+.theme--default {
+
+}
+
 body {
     color: @text-color;
     background-color: @body-bg-color;
@@ -129,91 +139,6 @@ body > .viewContainer {
 
 .panel-content > fieldset > .row-edit:first-of-type {
     border-top: 0 none black;
-}
-
-.quick-actions > .action-list {
-    background-color: @color-deep-slate;
-    padding: 10px 5px 15px 5px;
-}
-
-.tab-list > .tab,
-.more-tab-dropdown > .tab {
-        border-radius: 2px 2px 0 0;
-        cursor: pointer;
-        padding: 4px 6px 5px;
-        position: relative;
-        -webkit-transition: background-color 0.25s ease;
-        -moz-transition: background-color 0.25s ease;
-        -ms-transition: background-color 0.25s ease;
-        -o-transition: background-color 0.25s ease;
-        transition: background-color 0.25s ease;
-        color: @color-graphite;
-        font-size: 15px;
-        font-weight: normal;
-        text-decoration: none;
-}
-
-.tab-list {
-    border-bottom: 1px solid @color-lighter-slate !important;
-    height: 30px;
-    list-style: none outside none;
-    overflow: hidden;
-    .tab {
-        display: inline-block;
-    }
-    .selected {
-        color: @color-azure;
-    }
-}
-
-.more-tab-dropdown {
-    position: absolute;
-    visibility: hidden;
-    z-index: 10;
-    background-color: @background-lighter;
-    box-shadow: 0 2px 3px @color-light-slate;
-    margin: 0;
-    padding: 0;
-    overflow-y: auto;
-    .tab {
-        display: block;
-    }
-    .selected {
-        background-color: @color-azure;
-        color: #fff;
-    }
-}
-
-.detailContent {
-    padding-top: 15px !important;
-    li {
-        border-bottom: 1px solid @color-lighter-slate;
-    }
-    .row {
-        display: inline-flex;
-        justify-content: space-between;
-        width: 100%;
-    }
-}
-
-.detailContent.list {
-    padding-top: 0 !important;
-}
-
-.detail-header {
-    padding: 25px 0 10px 0 !important;
-    font-size: 18px;
-}
-
-.animated-bar {
-    height: 2px;
-    position: relative;
-    background-color: @color-azure;
-    -webkit-transition: left 0.25s ease;
-    -moz-transition: left 0.25s ease;
-    -ms-transition: left 0.25s ease;
-    -o-transition: left 0.25s ease;
-    transition: left 0.25s ease;
 }
 
 body > .viewContainer {
