--- a/content/css/themes/default.less
+++ b/content/css/themes/default.less
@@ -3,7 +3,7 @@
 
 // NOTE: Ensure that BEM notation is followed, hence the only nesting should occur here and is necessary for
 // the theming to work.
-// NOTE: Theme names should follow the following format theme--themeName where the themeName is camelCase
+// NOTE: Theme names should follow the following format theme--themeName where the themeName is in camelCase
 .theme--default {
 
 }
