BEM updates for Calendar

--- a/content/css/controls/calendar.less
+++ b/content/css/controls/calendar.less
@@ -2,7 +2,7 @@
   background-color: #fff;
 }
 
-.calendar-header {
+.calendar__header {
   min-height: 60px;
   border-bottom: 1px solid @color-lighter-slate;
   line-height: 60px;
@@ -39,7 +39,7 @@
   }
 }
 
-.calendar-table {
+.calendar__content {
   margin: 15px auto 0;
   border: 0;
   color: @color-light-graphite;
@@ -96,7 +96,7 @@
   }
 }
 
-.calendar-footer {
+.calendar__footer {
   min-height: 34px;
   width: 100%;
   padding-top: 5px;
